--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -16,6 +16,20 @@ merchant.label.email=Email
 merchant.label.website=WebSite
 merchant.label.status=Status
 
+store.page.heading=Store Management
+store.label.id=Store Id
+store.label.name=Name
+store.label.description=Description
+store.label.address=Address
+store.label.city=City
+store.label.pin=Zip Code
+store.label.state=State
+store.label.phone=Phone
+store.label.mobile=Mobile
+store.label.email=Email
+store.label.website=WebSite
+store.label.status=Status
+
 
 footer.text=Cinch Wallet
 footer.url=www.cinchwallet.com
