--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -30,6 +30,20 @@ store.label.email=Email
 store.label.website=WebSite
 store.label.status=Status
 
+cardproduct.page.heading=Card ProductManagement
+cardproduct.label.name=Name
+cardproduct.label.upc=UPC
+cardproduct.label.description=Description
+cardproduct.label.currency=Currency
+cardproduct.label.issuing.merchant=Issuing Merchant
+cardproduct.label.point.program=Is Point Program
+cardproduct.label.status=Status
+cardproduct.label.card.type=Card Type
+cardproduct.label.reload.limit=Reload Limit
+cardproduct.label.redeem.limit=Redeem Limit
+cardproduct.label.supported.txn=Supported Txn
+cardproduct.label.online.pin.required=Pin Required
+
 
 footer.text=Cinch Wallet
 footer.url=www.cinchwallet.com
