--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -1,5 +1,6 @@
 home.page.title=Cinch Wallet - Admin Portal
 home.heading=Dashboard
+home.sub.heading=Welcome to Admin Portal
 home.welcome.message=Admin Portal Dashboard
 
 merchant.page.heading=Merchant Management
@@ -43,6 +44,13 @@ cardproduct.label.reload.limit=Reload Limit
 cardproduct.label.redeem.limit=Redeem Limit
 cardproduct.label.supported.txn=Supported Txn
 cardproduct.label.online.pin.required=Pin Required
+
+
+transaction.page.heading=Search Transaction
+transaction.label.merchant=Merchant
+transaction.label.store=Store
+transaction.label.card=Card Number
+transaction.label.txn.date=Transaction Date
 
 
 footer.text=Cinch Wallet
