changes for CMS

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -53,6 +53,16 @@ transaction.label.card=Card Number
 transaction.label.txn.date=Transaction Date
 
 
+card.page.heading=Card Management
+card.label.number=Card Number
+card.label.upc=UPC
+card.label.description=Proxy Number
+card.label.currency=Preload Amount
+card.label.issuing.merchant=expiry Date
+card.label.point.program=Balance
+card.label.status=Status
+
+
 footer.text=Cinch Wallet
 footer.url=www.cinchwallet.com
 
