--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -30,6 +30,8 @@ store.label.mobile=Mobile
 store.label.email=Email
 store.label.website=WebSite
 store.label.status=Status
+store.label.username=Username
+store.label.password=Password
 
 cardproduct.page.heading=Card Product Management
 cardproduct.label.name=Name
@@ -37,6 +39,8 @@ cardproduct.label.upc=UPC
 cardproduct.label.description=Description
 cardproduct.label.currency=Currency
 cardproduct.label.issuing.merchant=Issuing Merchant
+cardproduct.label.earnpoint.rule=Earn Point Rule
+cardproduct.label.burnpoint.rule=Burn Point Rule
 cardproduct.label.point.program=Is Point Program
 cardproduct.label.status=Status
 cardproduct.label.card.type=Card Type
@@ -61,6 +65,13 @@ card.label.currency=Preload Amount
 card.label.issuing.merchant=expiry Date
 card.label.point.program=Balance
 card.label.status=Status
+
+offer.page.heading=Offer Management
+offer.label.name=Offer Name
+offer.label.upc=UPC
+offer.label.description=Description
+offer.label.promocode=Promo Code
+offer.label.promorule=Promo Rule
 
 
 footer.text=Cinch Wallet
