--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,8 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/cw_admin
+database.url=jdbc:mysql://localhost:3306/cinchwallet
 database.user=root
 database.password=1234
+#database.url=jdbc:mysql://cinchwallet.cjobegfhied1.us-west-2.rds.amazonaws.com:3306/cinchwallet
+#database.user=cinchwallet
+#database.password=cinchwallet
 hibernate.show_sql=true
