added loyalty type

--- a/src/main/resources/label.properties
+++ b/src/main/resources/label.properties
@@ -48,7 +48,8 @@ cardproduct.label.reload.limit=Reload Limit
 cardproduct.label.redeem.limit=Redeem Limit
 cardproduct.label.supported.txn=Supported Txn
 cardproduct.label.online.pin.required=Pin Required
-
+cardproduct.label.loyaltystatus=Loyalty Type
+cardproduct.label.pointpertxn=Points Per Txn
 
 transaction.page.heading=Search Transaction
 transaction.label.merchant=Merchant
